# test-cline

./: .clinerules  .gitignore  README.md  main.py  pyproject.toml
backend/: main.py  pyproject.toml
backend/tests/: test_main.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.test.tsx  App.tsx  setupProxy.js
